--- a/layout-test.html
+++ b/layout-test.html
@@ -1,11 +1,14 @@
 ---
-layout: foundation
+layout: default-foundation
 title: Layout Test
 permalink: /layout-test/
 ---
 
-<div class="container">
-
- 
+<div class="columns" style="background-color: purple;">
+  <div class="row small-up-2 medium-up-4 large-up-6">
+    <div class="column column-block">
+      <img src="{{ site.baseurl }}/assets/img/thumb.png" alt="block-img">
+    </div>
+  </div>
 </div>
 
