--- a/playbacks.html
+++ b/playbacks.html
@@ -4,28 +4,113 @@ title: Playbacks
 permalink: /playbacks/
 ---
 
-<div class="container">
-    <div class="column add-bottom">
-        <div id="mainwrap">
-            <div id="nowPlay">
-                <span id="npAction">Paused...</span><span id="npTitle"></span>
+<div class="row expanded" style="background-color: lightgray">
+    <div class="columns">
+        <a href="#">My Company</a>
+    </div>
+    <div class="columns">
+        My menu
+    </div>
+</div>
+
+<div class="row expanded align-stretch">
+    <div class="small-12 medium-6 large-9 columns">
+        <h1>My title</h1>
+        <h3 class="subheader">My slightly less important heading</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+        <div class="row">
+            <div class="small-12 large-3 columns">
+                <a href="#" class="button expanded">Order Now</a>
             </div>
-            <div id="audiowrap">
-                <div id="audio0">
-                    <audio id="audio1" preload controls>Your browser does not support HTML5 Audio! 😢</audio>
-                </div>
-                <div id="tracks">
-                    <a id="btnPrev">&vltri;</a><a id="btnNext">&vrtri;</a>
-                </div>
-            </div>
-            <div id="plwrap">
-                <ul id="plList"></ul>
+            <div class="small-12 large-3 large-offset-6 columns">
+                <a href="#" class="button hollow expanded">Learn more</a>
             </div>
         </div>
+
+        <div class="row small-up-2 medium-up-4 large-up-6">
+            <div class="column column-block">
+                <img src="assets/img/thumb.png">
+            </div>
+            <div class="column column-block">
+                <img src="assets/img/thumb.png">
+            </div>
+            <div class="column column-block">
+                <img src="assets/img/thumb.png">
+            </div>
+            <div class="column column-block">
+                <img src="assets/img/thumb.png">
+            </div>
+            <div class="column column-block">
+                <img src="assets/img/thumb.png">
+            </div>
+            <div class="column column-block">
+                <img src="assets/img/thumb.png">
+            </div>
+        </div>
+
+        <form>
+            <div class="row expanded">
+                <div class="columns">
+                    <h4>Fill out our form</h4>
+                </div>
+            </div>
+
+            <div class="row expanded">
+                <div class="small-12 medium-6 columns">
+                    <label>First Name
+                        <input type="text">
+                    </label>
+                </div>
+                <div class="small-12 medium-6 columns">
+                    <label>Last Name
+                        <input type="text">
+                    </label>
+                </div>
+            </div>
+
+            <div class="row expanded">
+                <div class="small-12 columns">
+                    <label>Your message
+                        <textarea></textarea>
+                    </label>
+                </div>
+            </div>
+
+            <div class="row expanded">
+                <div class="small-12 columns">
+                    <fieldset class="fieldset">
+                        <legend>When should we contact you?</legend>
+                        <input id="contact1" type="radio" value="morning"><label for="contact1">Morning</label>
+                        <input id="contact2" type="radio" value="evening"><label for="contact2">Evening</label>
+                    </fieldset>
+
+                    <p>My switch question?</p>
+                    <div class="switch large">
+                        <input type="checkbox" class="switch-input" id="mySwitch" name="mySwitch">
+                        <label class="switch-paddle" for="mySwitch">
+                            <span class="show-for-sr">My Switch Option</span>
+                            <span class="switch-active" aria-hidden="true">Yes</span>
+                            <span class="switch-inactive" aria-hidden="true">No</span>
+                        </label>
+                    </div>
+
+                    <input type="submit" class="button expanded hollow" value="Contact us">
+
+                </div>
+            </div>
+        </form>
+
     </div>
-    <div class="column add-bottom center">
-        <p>Music by <a href="http://www.mythium.net/">Mythium</a></p>
-        <p>Download: <a href="https://archive.org/download/mythium/mythium_vbr_mp3.zip">zip</a> / <a href="https://archive.org/download/mythium/mythium_archive.torrent">torrent</a></p>
+    <div class="small-12 medium-6 large-3 columns" style="background-color:lightgray">
+        <h3>Import Topic</h3>
+
+        <ul class="no-bullet">
+            <li>Important item here</li>
+            <li>Important item here</li>
+            <li>Important item here</li>
+            <li>And <a href="#">one more</a> important item</li>
+        </ul>
     </div>
 </div>
 
