--- a/layout-test.html
+++ b/layout-test.html
@@ -5,7 +5,22 @@ permalink: /layout-test/
 ---
 
 <div class="columns" style="background-color: purple;">
-  <div class="row small-up-2 medium-up-4 large-up-6">
+  <div class="row small-up-2 medium-up-4 large-up-6 align-center-middle">
+    <div class="column column-block">
+      <img src="{{ site.baseurl }}/assets/img/thumb.png" alt="block-img">
+    </div>
+    <div class="column column-block">
+      <img src="{{ site.baseurl }}/assets/img/thumb.png" alt="block-img">
+    </div>
+    <div class="column column-block">
+      <img src="{{ site.baseurl }}/assets/img/thumb.png" alt="block-img">
+    </div>
+    <div class="column column-block">
+      <img src="{{ site.baseurl }}/assets/img/thumb.png" alt="block-img">
+    </div>
+    <div class="column column-block">
+      <img src="{{ site.baseurl }}/assets/img/thumb.png" alt="block-img">
+    </div>
     <div class="column column-block">
       <img src="{{ site.baseurl }}/assets/img/thumb.png" alt="block-img">
     </div>
