--- a/playbacks.html
+++ b/playbacks.html
@@ -1,17 +1,8 @@
 ---
-layout: default
-title: Playbacks
+layout: default-foundation
+title: foundation
 permalink: /playbacks/
 ---
-
-<div class="row expanded" style="background-color: lightgray">
-    <div class="columns">
-        <a href="#">My Company</a>
-    </div>
-    <div class="columns">
-        My menu
-    </div>
-</div>
 
 <div class="row expanded align-stretch">
     <div class="small-12 medium-6 large-9 columns">
@@ -30,22 +21,22 @@ permalink: /playbacks/
 
         <div class="row small-up-2 medium-up-4 large-up-6">
             <div class="column column-block">
-                <img src="assets/img/thumb.png">
+                <img src="{{ site.baseurl }}/assets/img/thumb.png" alt="block-img">
             </div>
             <div class="column column-block">
-                <img src="assets/img/thumb.png">
+                <img src="{{ site.baseurl }}/assets/img/thumb.png" alt="block-img">
             </div>
             <div class="column column-block">
-                <img src="assets/img/thumb.png">
+                <img src="{{ site.baseurl }}/assets/img/thumb.png" alt="block-img">
             </div>
             <div class="column column-block">
-                <img src="assets/img/thumb.png">
+                <img src="{{ site.baseurl }}/assets/img/thumb.png" alt="block-img">
             </div>
             <div class="column column-block">
-                <img src="assets/img/thumb.png">
+                <img src="{{ site.baseurl }}/assets/img/thumb.png" alt="block-img">
             </div>
             <div class="column column-block">
-                <img src="assets/img/thumb.png">
+                <img src="{{ site.baseurl }}/assets/img/thumb.png" alt="block-img">
             </div>
         </div>
 
