--- a/login-form-aligned-center.html
+++ b/login-form-aligned-center.html
@@ -27,7 +27,7 @@ permalink: /login-form-test/
     <form data-abide novalidate>
       <div class="row expanded">
         <div class="columns">
-          <h4>Fill out our form</h4>
+          <h4 class="text-center">Login</h4>
         </div>
       </div>
 
@@ -53,6 +53,7 @@ permalink: /login-form-test/
       </div>
       <button type="button" class="button disabled hollow radius bordered expanded">Search</button>
     </form>
+    <p class="text-center"><a href="#">Forgot your password?</a></p>
   </div>
 </div>
 
