--- a/login-form-aligned-center.html
+++ b/login-form-aligned-center.html
@@ -5,29 +5,20 @@ permalink: /login-form-test/
 ---
 
 <div class="columns" style="">
-  <div class="row small-12 medium-6">
-    <div class="callout alert" data-closable>
-      <h5><i class="fi-alert"></i>This is Important!</h5>
-      <p>But when you're done reading it, click the close button in the corner to dismiss this alert.</p>
-      <p>I'm using the default <code>data-closable</code> parameters, and simply fade out.</p>
-      <button class="close-button" aria-label="Dismiss alert" type="button" data-close>
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="callout success" data-closable="slide-out-right">
-      <h5>This a friendly message.</h5>
-      <p>And when you're done with me, I can be closed using a Motion UI animation.</p>
-      <button class="close-button" aria-label="Dismiss alert" type="button" data-close>
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-  </div>
+  <div class="row columns small-12 medium-9 large-6 align-center-middle padding-top-2">
+    <form class="log-in-form" data-abide novalidate>
 
-  <div class="row small-12 medium-6 small-up-2 medium-up-4 large-up-6 align-center-middle">
-    <form data-abide novalidate>
+      <div data-abide-error class="alert callout" style="display: none;" data-closable>
+        <p><i class="fi-alert"></i> There are some errors in your form.</p>
+        <button class="close-button" aria-label="Dismiss alert" type="button" data-close>
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+
       <div class="row expanded">
         <div class="columns">
           <h4 class="text-center">Login</h4>
+          <p class="text-center">Need an account? <a href="{{"/sign-up-form-1/" | relative_url }}">Register Here.</a></p>
         </div>
       </div>
 
@@ -51,9 +42,10 @@ permalink: /login-form-test/
           <p class="help-text" id="passwordHint">Enter a password please.</p>
         </div>
       </div>
-      <button type="button" class="button disabled hollow radius bordered expanded">Search</button>
+      <button type="submit" value="submit" class="button  radius bordered expanded">Search</button>
+      <p class="text-center"><a href="{{"/forgot-password/" | relative_url }}">Forgot your password?</a></p>
+
     </form>
-    <p class="text-center"><a href="#">Forgot your password?</a></p>
   </div>
 </div>
 
