--- a/layout-test.html
+++ b/layout-test.html
@@ -27,3 +27,10 @@ permalink: /layout-test/
   </div>
 </div>
 
+<div class="input-group">
+  <span class="input-group-label">$</span>
+  <input class="input-group-field" type="number">
+  <div class="input-group-button">
+    <input type="submit" class="button" value="Submit">
+  </div>
+</div>
