--- a/register-page-1.html
+++ b/register-page-1.html
@@ -5,7 +5,7 @@ permalink: /sign-up-form-1/
 ---
 
 <div class="columns" style="">
-  <div class="row columns small-12 large-6 align-center-middle padding-2">
+  <div class="row columns small-12 large-6 align-center-middle padding-1">
     <form class="sign-up-form" data-abide novalidate>
 
       <div data-abide-error class="alert callout" style="display: none;" data-closable>
@@ -74,6 +74,20 @@ permalink: /sign-up-form-1/
         </div>
       </div>
       <button type="submit" value="submit" class="button  radius bordered expanded">Continue</button>
+
+      <div class="row expanded padding-1">
+        <ol class="progress-indicator">
+          <li class="is-current" data-step="">
+            <span>Sign Up</span>
+          </li>
+          <li class="" data-step="">
+            <span>Verify</span>
+          </li>
+          <li class="" data-step="">
+            <span>Done!</span>
+          </li>
+        </ol>
+      </div>
     </form>
   </div>
 </div>
