--- a/email-sent.html
+++ b/email-sent.html
@@ -1,7 +1,7 @@
 ---
 layout: default-foundation
-title: Sign Up Form Page 1
-permalink: /sign-up-form-1/
+title: Email Sent
+permalink: /email-sent/
 ---
 
 <div class="columns" style="">
