--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
 ---
 
-layout: default
+layout: default-foundation
 ---
+<link rel="stylesheet" href="{{ "/assets/css/youtube.css" | relative_url }}">
+
+<div class="columns" style="">
+  <div class="container">
+    <section id="video">
+
+    </section>
+
+    <div id="videos">
+
+    </div>
+  </div>
+</div>
