--- a/.login-form-aligned-center.html
+++ b/.login-form-aligned-center.html
@@ -6,7 +6,7 @@ permalink: /login-form-test/
 
 <div class="columns" style="">
   <div class="row columns small-12 medium-9 large-6 align-center-middle padding-top-2">
-    <form class="log-in-form" data-abide novalidate>
+      <form class="log-in-form" data-abide novalidate>
 
       <div data-abide-error class="alert callout" style="display: none;" data-closable>
         <p><i class="fi-alert"></i> There are some errors in your form.</p>
@@ -32,16 +32,22 @@ permalink: /login-form-test/
           </label>
           <p class="help-text" id="emailHint">Here's how you use this input field!</p>
         </div>
-        <div class="small-12 medium-12 columns">
-          <label>Password
-            <input type="password" id="password" placeholder="yeti4preZ" aria-describedby="passwordHint" aria-errormessage="passwordError" required data-equalto="password">
-            <span class="form-error">
-            Password, it's required.
-          </span>
-          </label>
+
+        <div class="small-12 medium-12 columns ">
+          <div class="password-wrapper show-password">
+            <label >Password</label>
+                <input type="password" id="password" class="password" placeholder="yeti4preZ" aria-describedby="passwordHint" aria-errormessage="passwordError" required data-equalto="password">
+            <i class="large fi-eye"></i><button class="unmask" type="button" title="Mask/Unmask password to check content"><<i class="large fi-eye"></i></button>
+
+              <span class="form-error">
+              Password, it's required.
+            </span>
+
+          </div>
           <p class="help-text" id="passwordHint">Enter a password please.</p>
         </div>
       </div>
+
       <button type="submit" value="submit" class="button  radius bordered expanded">Search</button>
       <p class="text-center"><a href="{{"/forgot-password/" | relative_url }}">Forgot your password?</a></p>
 
