--- a/videos.html
+++ b/videos.html
@@ -3,8 +3,45 @@ layout: default-foundation
 title: Videos
 permalink: /videos/
 ---
-<div class="row expanded align-stretch">
-  <div class="small-12 medium-6 large-9 columns">
 
+<div class="columns padding-top-2">
+  <div id="video-player" class="row columns small-12 medium-12 large-12 align-center-middle" style="background-color: yellowgreen;">
+    <div class="responsive-embed">
+      <iframe style="height: 300px;" width="215" height="200" src="https://www.youtube.com/embed/96RSqhsCLwY" allow="autoplay; encrypted-media" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </div>
+
+  <div id="videos-list" class="row columns small-12 medium-12 large-12 align-center-middle padding-top-1" style="background-color: greenyellow;">
+    <div class="media-object">
+      <div class="media-object-section">
+        <img src= "https://i.ytimg.com/vi/ZgdirIednyA/mqdefault.jpg">
+      </div>
+
+      <div class="media-object-section">
+        <h4>Dreams feel real while we're in them.</h4>
+        <p>I'm going to improvise. Listen, there's something you should know about me... about inception. An idea is like a virus, resilient, highly contagious. The smallest seed of an idea can grow. It can grow to define or destroy you.</p>
+      </div>
+    </div>
+
+    <div class="media-object">
+      <div class="media-object-section">
+        <img src= "https://i.ytimg.com/vi/xpaX2j75UKk/mqdefault.jpg">
+      </div>
+
+      <div class="media-object-section">
+        <h4>Dreams feel real while we're in them.</h4>
+        <p>I'm going to improvise. Listen, there's something you should know about me... about inception. An idea is like a virus, resilient, highly contagious. The smallest seed of an idea can grow. It can grow to define or destroy you.</p>
+      </div>
+    </div>
+    <div class="media-object">
+      <div class="media-object-section">
+        <img src= "https://i.ytimg.com/vi/pxPbgLbBGGQ/mqdefault.jpg">
+      </div>
+
+      <div class="media-object-section">
+        <h4>Dreams feel real while we're in them.</h4>
+        <p>I'm going to improvise. Listen, there's something you should know about me... about inception. An idea is like a virus, resilient, highly contagious. The smallest seed of an idea can grow. It can grow to define or destroy you.</p>
+      </div>
+    </div>
   </div>
 </div>
