--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@ title: About
 permalink: /about-us/
 ---
 
+<h?> Who is Patrick Anyways?</h?>
 <p>
-    <b>This is Patrick!</b>
+    <b>This is Patrick !!</b>
+    <img src = "Patrick.jpeg">
 </p>
