--- a/about.html
+++ b/about.html
@@ -5,7 +5,12 @@ permalink: /about-us/
 ---
 
 <h?> Who is Patrick Anyways?</h?>
+<br> 
+
+
 <p>
-    <b>This is Patrick !!</b>
-    <img src = "Patrick.jpeg">
+    <span style="color:red">
+    <b><br>This is Patrick !!</b>
+ 
+   
 </p>
