fixed css issue with page layout

--- a/index.html
+++ b/index.html
@@ -3,4 +3,11 @@
 layout: default
 ---
 
-Welcome to ThinkIt.BuildIt.DeployIt. Intro to web development.
+<div class="medium-12 large-12">
+  <div style="background-color: yellow"  class="large-6">
+    testing 1
+  </div>
+  <div style="background-color: deeppink" class="large-6">
+    testing 2
+  </div>
+</div>
