--- a/riley-page.html
+++ b/riley-page.html
@@ -1,8 +1,8 @@
 ---
 
 layout: default
-title: Riley's Page
-permalink: /riley-page/
+title: Brandon's Page
+permalink: /brandon-page/
 ---
 
 Happy Birthday!!
