--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 layout: default
 ---
 
-<div class="medium-12 large-12">
+<div class="grid-container">
   <div style="background-color: yellow"  class="large-6">
     testing 1
   </div>
   <div style="background-color: deeppink" class="large-6">
     testing 2
   </div>
+
 </div>
