--- a/about.html
+++ b/about.html
@@ -3,14 +3,28 @@ layout: default
 title: About
 permalink: /about-us/
 ---
-
+<!--
 <h?> Who is Patrick Anyways?</h?>
 <br> 
 
 
 <p>
-    <span style="color:red">
+    <span style="color:orange">
     <b><br>This is Patrick !!</b>
  
    
 </p>
+-->
+<div class="grid-x">
+    <span style = "color:aqua">
+  <div class="cell">Is this aqua?</div> 
+  <div class="cell">full width cell</div>
+</div>
+<div class="grid-x">
+  <div class="cell small-6">6 cells</div>
+  <div class="cell small-6">6 cells</div>
+</div>
+<div class="grid-x">
+  <div class="cell medium-6 large-4">12/6/4 cells</div>
+  <div class="cell medium-6 large-8">12/6/8 cells</div>
+</div>
