--- a/index.html
+++ b/index.html
@@ -2,3 +2,11 @@
 
 layout: default
 ---
+
+<div class="main-page-class">
+  <div>
+    this will be the landing page
+    <img src="{{ "/assets/images/Sitting+Cat+Figurine.jpg" | relative_url }}" alt="sitting cat">
+  </div>
+
+</div>
