Added CSS and JS

--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@ layout: default
 ---
 
 <div class="main-page-class">
-  <div>
-    this will be the landing page
-    <img src="{{ "/assets/images/Sitting+Cat+Figurine.jpg" | relative_url }}" alt="sitting cat">
+  <div class="section-div" style="height: 100vh;">
+    this will be the landing page section 1
+
+    <iframe id="iframe-1" width="560" height="315" src="https://www.youtube.com/embed/OR07r0ZMFb8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    </iframe>
+
+    <br/>
+    <br/>
+    <br/>
+    <button id="special-button-1" type="button" class="alert button float-center">Delete</button>
+  </div>
+
+  <div class="section-div" style="height: 100vh;">
+    this will be the landing page section 2
+
+    <iframe id="iframe-2" width="560" height="315" src="https://www.youtube.com/embed/QLvvkTbHjHI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    </iframe>
+
+    <br/>
+    <br/>
+    <br/>
+    <button id="special-button-2" type="button" class="alert button float-center">Delete</button>
+  </div>
+
+  <div class="section-div" style="height: 100vh;">
+    this will be the landing page section 3
+
+    <iframe id="iframe-3" width="560" height="315" src="https://www.youtube.com/embed/aAkMkVFwAoo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    </iframe>
+
+    <br/>
+    <br/>
+    <br/>
+    <button id="special-button-3" type="button" class="alert button float-center">Delete</button>
   </div>
 
 </div>
