--- a/index.html
+++ b/index.html
@@ -2,19 +2,16 @@
 
 layout: default
 ---
-<div class="main-page-class" style="height: 100vh; width: 100vw; background-color: yellow">
-    
-  <div class="cell">full width cell</div>
-  <div class="cell">full width cell</div>
-    
-    <img src="{{site.baseurl}}/assets/images/cat.jpg" alt = "oops no cat">
+<div class="main-page-class" style="height: 100vh; width: 100vw; background-color:black">
+  <h>"My mission is to address water cleanliness, sustainable transportation and education for the masses. I do this in part through my projects on this site."</h>  
+    <img src="{{site.baseurl}}/assets/images/Patrick_side.jpg" alt = "oops no cat">
 </div>
 
 <form>
-  <label>Input Label
-    <input type="text" placeholder=".small-12.columns" aria-describedby="exampleHelpText">
+  <label>Question of the day.
+    <input type="text" placeholder="Why do you think mass distorts spacetime?" aria-describedby="exampleHelpText">
   </label>
-  <p class="help-text" id="exampleHelpText">Here's how you use this input field!</p>
+  <p class="help-text" id="exampleHelpText">Trivia!</p>
   <label>
     How many puppies?
     <input type="number" value="100">
