updated index.html file to my repo

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 layout: default
 ---
 <div class="main-page-class" style="height: 100vh; width: 100vw; background-color:black">
-  <h>"My mission is to address water cleanliness, sustainable transportation and education for the masses. I do this in part through my projects on this site."</h>  
+  <h>"The mission is to address water cleanliness, sustainable transportation and education for the masses. I do this in part through my projects on this site."</h>  
     <img src="{{site.baseurl}}/assets/images/Patrick_side.jpg" alt = "oops no cat">
 </div>
 
